--- a/html/notesApp.html
+++ b/html/notesApp.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notes App</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
@@ -16,8 +16,8 @@
     <div class="notes" id="app">
         
     </div>
-    <script src="/js/NotesMain.js" type="module"></script>
+    <script src="../js/NotesMain.js" type="module"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="/js/toDoListButtons.js"></script>
+    <script src="../js/toDoListButtons.js"></script>
 </body>
 </html>
