--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
 <main class="form-signin">
   <form>
-    <img class="mb-4" src="../assets/logo.png" alt="" width="150" height="150">
+    <img class="mb-4" src="logo.png" alt="" width="150" height="150">
     <h1 class="h3 mb-3 fw-normal">Please log in</h1>
 
     <div class="form-floating">
