--- a/html/selectApp.html
+++ b/html/selectApp.html
@@ -14,8 +14,8 @@
 <body class="body text-center">
   <div><img class="logo mb-5" src="../assets/logo.png" alt="" width="150" height="150"></div>
     <div class="d-flex justify-content-center align-items-center h-100">
-      <a href="./html/notesApp.html">  <img src="../assets/notesAppLogo.png" class="rounded" alt="..."></a>
-      <a href="./html/toDoList.html">  <img src="../assets/tasksAppLogo.png" class="rounded" alt="..."></a>
+      <a href="./notesApp.html">  <img src="../assets/notesAppLogo.png" class="rounded" alt="..."></a>
+      <a href="./toDoList.html">  <img src="../assets/tasksAppLogo.png" class="rounded" alt="..."></a>
     </div>
 </body>
 </html>
