--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>O App</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/sign-in/">
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <link href="../css/signin.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/signin.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
     
 <main class="form-signin">
   <form>
-    <img class="mb-4" src="../assets/logo.png" alt="" width="150" height="150">
+    <img class="mb-4" src="./assets/logo.png" alt="" width="150" height="150">
     <h1 class="h3 mb-3 fw-normal">Please log in</h1>
 
     <div class="form-floating">
