--- a/toDoList.html
+++ b/toDoList.html
@@ -7,14 +7,14 @@
     <title>O App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../css/toDoList.css">
+    <link rel="stylesheet" href="./css/toDoList.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <div class="mt-5 text-center"><img class="mt-3" src="../assets/logo.png" alt=""></div>
+        <div class="mt-5 text-center"><img class="mt-3" src="./assets/logo.png" alt=""></div>
         <h1 class="text-center justify-content-end mt-3">TASK LIST</h1>
         <div class="d-flex flex-row justify-content-end gap-2">
         <button id="btnHome2" class="btn btn-warning btn-lg" type="button">HOME</button>
@@ -45,8 +45,8 @@
 </div>
     
     </template>
-    <script src="../js/toDoApp.js"></script>
+    <script src="./js/toDoApp.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="../js/toDoListButtons.js"></script>
+    <script src="./js/toDoListButtons.js"></script>
 </body>
 </html>
