--- a/notesApp.html
+++ b/notesApp.html
@@ -16,7 +16,7 @@
     <div class="notes" id="app">
         
     </div>
-    <script src="./js/NotesMain.js" type="module"></script>
+    <script src="./js/notesMain.js" type="module"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/toDoListButtons.js"></script>
 </body>
