--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
         <input type="checkbox" value="remember-me"> Remember me
       </label>
     </div>
-    <button class="btnLogIn" type="button" id="btnHome">
-      Log In</button>
+    <button class="btnLogIn" type="button" id="btnHome">Log In</button>
 
     <p class="mt-5 mb-3 text-muted">&copy; 2020–2021</p>
   </form>
