--- a/notesApp.html
+++ b/notesApp.html
@@ -4,20 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notes App</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <title>O App</title>
+    <link rel="stylesheet" href="./css/notesApp.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
     
 </head>
 <body>
-    <div class=""><button class="btnHome" id="btnHome2">HOME</button></div> 
-    <div class="notes" id="app">
-        
-    </div>
-    <script src="./js/notesMain.js" type="module"></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="./js/toDoListButtons.js"></script>
+    <div><a href="./selectApp.html"><img class="logo" src="./assets/logo.png" alt="" width="150" height="150"></a></div>
+    <div class="delete"><p>Double click on a note to delete.</p></div>
+    <div class="appNotes" id="app">
+        <button class="add-note" type="button">+</button>
+      </div>
+      <script src="./js/notesApp.js"></script>
 </body>
 </html>
