--- a/selectApp.html
+++ b/selectApp.html
@@ -12,10 +12,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body class="body text-center">
-  <div><img class="logo mb-5" src="./assets/logo.png" alt="" width="150" height="150"></div>
+  <div> <a href="./selectApp.html"> <img class="logo" src="./assets/logo.png" alt="" width="150" height="150"></a></div>
     <div class="d-flex justify-content-center align-items-center h-100">
-      <a href="./notesApp.html">  <img src="./assets/notesAppLogo.png" class="rounded" alt="..."></a>
-      <a href="./toDoList.html">  <img src="./assets/tasksAppLogo.png" class="rounded" alt="..."></a>
+    <div><a href="./notesApp.html">  <img src="./assets/notesAppLogo.png" class="rounded" alt="..."></a></div>
+    <div><a href="./toDoList.html">  <img src="./assets/tasksAppLogo.png" class="rounded" alt="..."></a></div>
     </div>
 </body>
 </html>
