--- a/toDoList.html
+++ b/toDoList.html
@@ -14,11 +14,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="mt-5 text-center"><img class="mt-3" src="./assets/logo.png" alt=""></div>
+        <div class="mt-5 text-center"><a href="./selectApp.html"><img class="mt-3" src="./assets/logo.png" alt="" width="150" height="150"></a></div>
         <h1 class="text-center justify-content-end mt-3">TASK LIST</h1>
         <div class="d-flex flex-row justify-content-end gap-2">
-        <button id="btnHome2" class="btn btn-warning btn-lg" type="button">HOME</button>
-        <button id="btnNotes2" class="btn btn-warning btn-lg" type="button">NOTES</button>
+        <button id="btnHome2" class="btn btn-primary btn-lg" type="button">HOME</button>
+        <button id="btnNotes2" class="btn btn-primary btn-lg" type="button">NOTES</button>
     </div>
 
     <form id="formId">
