--- a/selectApp.html
+++ b/selectApp.html
@@ -6,16 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O App</title>
     <link rel="stylesheet" href="./css/selectApp.css">
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/sign-in/">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body class="body text-center">
+  
   <div> <a href="./selectApp.html"> <img class="logo" src="./assets/logo.png" alt="" width="150" height="150"></a></div>
-    <div class="d-flex justify-content-center align-items-center h-100">
+    <div class="d-flex flex-column h-100">
     <div><a href="./notesApp.html">  <img src="./assets/notesAppLogo.png" class="rounded" alt="..."></a></div>
     <div><a href="./toDoList.html">  <img src="./assets/tasksAppLogo.png" class="rounded" alt="..."></a></div>
+    <div><a href="./weather.html">  <img src="./assets/weatherLogo.png" class="rounded" alt="..."></a></div>
     </div>
 </body>
 </html>
