--- a/notesApp.html
+++ b/notesApp.html
@@ -11,11 +11,12 @@
     
 </head>
 <body>
-    <div><a href="./selectApp.html"><img class="logo" src="./assets/logo.png" alt="" width="150" height="150"></a></div>
+    <div><a href="./noSplashIndex.html"><img class="logo" src="./assets/logo.png" alt="" width="150" height="150"></a></div>
     <div class="delete"><p>Double click on a note to delete.</p></div>
     <div class="appNotes" id="app">
         <button class="add-note" type="button">+</button>
       </div>
+
       <script src="./js/notesApp.js"></script>
 </body>
 </html>
