--- a/weather.html
+++ b/weather.html
@@ -8,7 +8,7 @@
     <title>O App</title>
 </head>
 <body>
-    <div><a href="./selectApp.html"><img class="logo" src="./assets/logo.png" alt="" width="150" height="150"></a></div>
+    <div><a href="./noSplashIndex.html"><img class="logo" src="./assets/logo.png" alt="" width="150" height="150"></a></div>
     <div class="container">
         <div class="current-info">
 
