--- a/index.html
+++ b/index.html
@@ -1,47 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O App</title>
-
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/splashStart.css">
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/sign-in/">
     <link href="./css/bootstrap.min.css" rel="stylesheet">
-    <link href="./css/signIn.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
-  </head>
-  <body class="text-center">
-    
-<main class="form-signin">
-  <form>
-    <img class="mb-4" src="./assets/logo.png" alt="" width="150" height="150">
-    <h1 class="h3 mb-3 fw-normal">Please log in</h1>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
+<body class="body text-center">
+  
 
-    <div class="form-floating">
-      <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-      <label for="floatingInput">E-mail</label>
+      <div class="splash">
+        <img class="logo" src="./assets/logo.png" alt="" width="150" height="150">
+        <h2 class="fade-in"> Organizer App</h2>
+      </div>
+
+
+  <div> <a href="./index.html"> <img class="logo" src="./assets/logo.png" alt="" width="150" height="150"></a></div>
+    <div class="d-flex flex-column h-100">
+    <div><a href="./notesApp.html">  <img src="./assets/notesAppLogo.png" class="rounded mb-1" alt="..."></a>
+    <a href="./toDoList.html">  <img src="./assets/tasksAppLogo.png" class="rounded mb-1" alt="..."></a></div>
+    <div><a href="./weather.html">  <img src="./assets/weatherLogo.png" class="rounded" alt="..."></a>
+    <a href="./quizGame.html">  <img src="./assets/quizGameApp.png" class="rounded" alt="..."></a></div>
     </div>
-    <div class="form-floating">
-      <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-      <label for="floatingPassword">Password</label>
+    <div>
+      <p class="mt-5 mb-3">Organizer App &copy; 2020–2021</p>
     </div>
 
-    <div class="checkbox mb-3">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
-    </div>
-    <button class="btnLogIn" type="button" id="btnHome">Log In</button>
-
-    <p class="mt-5 mb-3 text-muted">&copy; 2020–2021</p>
-  </form>
-</main>
-
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="./js/logInButton.js"></script>
-  </body>
+    <script src="./js/splashStart.js"></script>
+</body>
 </html>
