--- a/noSplashIndex.html
+++ b/noSplashIndex.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O App</title>
-    <link rel="stylesheet" href="./css/selectApp.css">
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/splashStart.css">
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/sign-in/">
     <link href="./css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,12 +15,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body class="body text-center">
-  
-  <div> <a href="./selectApp.html"> <img class="logo" src="./assets/logo.png" alt="" width="150" height="150"></a></div>
+
+  <div> <a href="./index.html"> <img class="logo" src="./assets/logo.png" alt="" width="150" height="150"></a></div>
     <div class="d-flex flex-column h-100">
-    <div><a href="./notesApp.html">  <img src="./assets/notesAppLogo.png" class="rounded" alt="..."></a></div>
-    <div><a href="./toDoList.html">  <img src="./assets/tasksAppLogo.png" class="rounded" alt="..."></a></div>
-    <div><a href="./weather.html">  <img src="./assets/weatherLogo.png" class="rounded" alt="..."></a></div>
+    <div><a href="./notesApp.html">  <img src="./assets/notesAppLogo.png" class="rounded mb-1" alt="..."></a>
+    <a href="./toDoList.html">  <img src="./assets/tasksAppLogo.png" class="rounded mb-1" alt="..."></a></div>
+    <div><a href="./weather.html">  <img src="./assets/weatherLogo.png" class="rounded" alt="..."></a>
+    <a href="./quizGame.html">  <img src="./assets/quizGameApp.png" class="rounded" alt="..."></a></div>
+    </div>
+    <div>
+      <p class="mt-5 mb-3">Organizer App &copy; 2020–2021</p>
     </div>
 </body>
 </html>
