--- a/quizGame.html
+++ b/quizGame.html
@@ -23,6 +23,6 @@
     <br>
     </div>
 
-    <script text="text/javascript" src="./js/quizGame.js"></script>
+    <script src="./js/quizGame.js"></script>
 </body>
 </html>
